[project]

name = "devops-tools"
version = "0.1.0"
description = "devops tools mostly in python, with tests examples"
authors = [
    { name = "Nicolas Heim" }
]

readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# namespaces = true
# where = ["devops_tools", "docker_tools"]
# include = [ "*"]
# include = ["devops_tools/*", "docker_tools/*"]

# [tool.setuptools.package-data]
# "jinja_templating_resources" = ["resources/*"

[tool.setuptools.data-files]
"devops-shared-data/scripts" = ["devops-shared-data/scripts/*"]

[project.optional-dependencies]

dev = [
    "pylint", 
    "pytest",
    # "jinja-templating[dev] @ file:///opt/projects/jinja-templating",
]

run = [
    "jinja-templating[run] @ git+https://github.com/nh-37rtm/jinja-templating.git@master",
]

[tool.black]
line-length = 70

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"


[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"